--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Lato', sans-serif;
     margin: 0px;
+    background-color: #070e4b;
 }
 
  .container {
@@ -9,7 +10,7 @@ body {
  }
 
 .nav-wrapper {
-    background-image: url("images/top-bar1.jpg");
+    background-color: #070e4b;
     min-height: 30px;
     background-position: center;
     background-repeat: no-repeat;
@@ -18,7 +19,6 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 28px;
-    border-bottom: white 2rem;
 }
 
 .left-side {
@@ -43,16 +43,16 @@ body {
 }
 
 .nav-link-wrapper:hover {
-    border-bottom: 2px solid skyblue;
+    border-bottom: 2px solid aquamarine;
 }
 
 .nav-link-wrapper a:hover {
-    color: skyblue;
+    color: aquamarine;
 }
 
 .active-nav-link a{
     font-size: 110%;
-    color: skyblue;
+    color: aquamarine;
 }
 
 .right-side {
@@ -63,11 +63,11 @@ body {
     margin-right: 16px;
     font-size: 1.3em;
     text-transform: uppercase;
-    color: skyblue;
+    color: aquamarine;
 }
 
 .info-wrapper {
-    display: grid ;
+    display: flex ;
     grid-template-columns: 1fr;
     align-items: center;
     
@@ -136,7 +136,9 @@ body {
 }
 
 .profile-image-wrapper img {
-    width: 100%;
+    padding-left: 20px;
+    width: auto;
+    height: auto;
 }
 
 .profile-content-wrapper {
@@ -160,60 +162,46 @@ body {
 
 /* welcome animated sign */
 .info-wrapper{
-    display: inline-block;
-    text-align:center;
-    color:#555;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: relative;
+    display: grid;
+    text-align:left;
     font-weight:300;
     font-size:42px;
     padding-top: 8px;
-    height:20vh;
-    overflow:hidden;
-    white-space: nowrap;
+    padding-left: 20%;
+    padding-bottom: 5rem ;
+
+}
+.intro1{
+    color: aquamarine;
+    display: block;
+    align-content: center;
+    font-size: 20px;
+
 }
 
-.welcome {
-    display: inline-block;
-    overflow: hidden;
-    font-size: 3.5rem;
-    white-space: wrap;
-  }
-  
-  .welcome:first-of-type {  
-    animation: showup 10s infinite;
-  }
-  
-  .welcome:last-of-type {
-    width:0px;
-    animation: reveal 10s infinite;
-  }
-  
-  .welcome:last-of-type span {
-    margin-left: 400px;
-    animation: slidein 10s infinite;
-  }
-  
-  @keyframes showup {
-      0% {opacity:0;}
-      20% {opacity:1;}
-      80% {opacity:1;}
-      100% {opacity:0;}
-  }
-  
-  @keyframes slidein {
-      0% { margin-left:-800px; }
-      20% { margin-left:-800px; }
-      35% { margin-left:0px; }
-      100% { margin-left:0px; }
-  }
-  
-  @keyframes reveal {
-      0% {opacity:0;width:0px;}
-      20% {opacity:1;width:0px;}
-      30% {width:355px;}
-      80% {opacity:1;}
-      100% {opacity:0;width:355px;}
-  }
-  /* done with welcome animation*/
+.intro2{
+    padding-top: 5px;
+    color:white;
+    display: block;
+    align-content: center;
+    font-size: 65px;
+}
+
+.intro3{
+    padding-top: 10px;
+    display: block;
+    color: rgb(185, 185, 185) ;
+    align-content: left;
+    font-size: 23px;
+    padding-right: 20%;
+}
+
+.content-wrapper{
+    padding: auto;
+}
+
 
   .projects-intro{
     display: flex ;
@@ -224,13 +212,12 @@ body {
     text-align: center;
     padding-left: 100px;
     padding-right: 100px;
-    ;  
+    
   }
   .projects-intro p1 {
-      color: skyblue;
+      color: aquamarine;
         text-transform: initial;
         padding: 3rem;
-        font-weight: bold;
         align-items: center;
         font-size: 2rem
   }
@@ -266,8 +253,8 @@ body {
 }
 
 .btn-white {
-    background-color: skyblue;
-    color: white;
+    background-color: aquamarine;
+    color: #070e4b;
 }
 
 .btn::after {
@@ -317,24 +304,23 @@ body {
   }
   .social-btn{
     display: inline-block;
-    width: 90px;
-    height: 90px;
-    background: #f1f1f1;
+    width: 80px;
+    height: 80px;
     margin: 10px;
-    border-radius: 30%;
-    box-shadow: 0 5px 15px -5px #00000070;
+    border-radius: 40%;
     color: lightseagreen;
     overflow: hidden;
     position: relative;
   }
   .social-btn i{
-    line-height: 90px;
-    font-size: 26px;
+    line-height:100px;
+    font-size: 30px;
     transition: 0.2s linear;
   }
   .social-btn:hover i{
-    transform: scale(1.3);
+    margin-bottom: 3px;
     color: #f1f1f1;
+    
   }
   .social-btn::before{
     content: "";
@@ -342,25 +328,62 @@ body {
     width: 120%;
     height: 120%;
     background: lightseagreen;
-    transform: rotate(45deg);
+    box-shadow: #070e4b;
     left: -110%;
     top: 90%;
   }
-  .social-btn:hover::before{
-    animation: aaa 0.7s 1;
-    top: -10%;
-    left: -10%;
-  }
-  @keyframes aaa {
-    0%{
-      left: -110%;
-      top: 90%;
-    }50%{
-      left: 10%;
-      top: -30%;
-    }100%{
-      top: -10%;
-      left: -10%;
-    }
+  
+ 
+
+
+
+
+
+
+  .emailRightBar {
+    width: 40px;
+    position: fixed;
+    bottom: 0px;
+    left: auto;
+    right: 40px;
+    z-index: 10;
+    color: white;
+}
+
+.emailLinkWrapper{
+    writing-mode: vertical-rl;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+    position: relative;
+}
+
+.emailLinkWrapper a{
+    display: inline-block;
+    text-decoration: none;
+    text-decoration-skip-ink: auto;
+    color: inherit;
+    position: relative;
+}
+
+
+.contact-links-left-bar {
+    writing-mode: vertical-rl;
+    display: flex;
+    flex-direction: column;
+    writing-mode: vertical-lr ;
+    position: relative;
+    width: 40px;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    right: auto;
+    z-index: 10;
+    color: white;
   }
   
+  .social-bar-left-index{
+    padding-top: 1.5rem;
+    text-align: center;
+  }
