--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body {
     padding-right: 5rem;
     padding-bottom: 5rem;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr;
 }
 
 .portfolio-item-wrapper {
@@ -93,6 +93,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border-radius: 5%;
 }
 
 .img-text-wrapper {
@@ -199,7 +200,10 @@ body {
 }
 
 .content-wrapper{
-    padding: auto;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: auto;
+    padding-bottom: auto;
 }
 
 
@@ -332,12 +336,6 @@ body {
     left: -110%;
     top: 90%;
   }
-  
- 
-
-
-
-
 
 
   .emailRightBar {
