--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Lato', sans-serif;
     margin: 0px;
-    background-color: #070e4b;
+    background-color: #1A2238;
 }
 
  .container {
@@ -10,7 +10,7 @@ body {
  }
 
 .nav-wrapper {
-    background-color: #070e4b;
+    background-color: #1A2238;
     min-height: 30px;
     background-position: center;
     background-repeat: no-repeat;
@@ -43,16 +43,16 @@ body {
 }
 
 .nav-link-wrapper:hover {
-    border-bottom: 2px solid aquamarine;
+    border-bottom: 2px solid #FF6A3D;
 }
 
 .nav-link-wrapper a:hover {
-    color: aquamarine;
+    color: #FF6A3D;
 }
 
 .active-nav-link a{
     font-size: 110%;
-    color: aquamarine;
+    color: #FF6A3D;
 }
 
 .right-side {
@@ -63,7 +63,7 @@ body {
     margin-right: 16px;
     font-size: 1.3em;
     text-transform: uppercase;
-    color: aquamarine;
+    color: #FF6A3D;
 }
 
 .info-wrapper {
@@ -84,7 +84,18 @@ body {
 
 .portfolio-item-wrapper {
     padding: 0.5rem;
-    position: relative;
+    position: relative;    
+}
+.portfolio-item-wrapper:hover .img-text-wrapper .subtitle{
+    font-weight: 600;
+    font-size: medium;
+    color: #FF6A3D;
+    transition: 0.6s;
+}
+
+.portfolio-item-wrapper:hover .img-text-wrapper .logo-wrapper img {
+    transition: 0.4s;
+    opacity: 1;
 }
 
 .portfolio-img-background {
@@ -93,7 +104,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    border-radius: 5%;
+    border-radius: 5%;  
 }
 
 .img-text-wrapper {
@@ -112,22 +123,22 @@ body {
 .logo-wrapper img   {
     width: 50%;
     margin-bottom: 20px;
+    opacity: 0;
 }
+
+
 
 
 .img-text-wrapper .subtitle {
     font-weight: 600;
-  color: transparent;
+    color: transparent;
 }
 
-.img-text-wrapper:hover .subtitle {
-    font-weight: 600;
-    color: lightseagreen;
-}
+
 
 .img-darken {
     transition: 0.8s;
-    filter: brightness(5%);
+    filter: brightness(20%);
 }
 
 .two-column-wrapper {
@@ -144,21 +155,22 @@ body {
 
 .profile-content-wrapper {
     padding: 30px;
+    position: relative;
 }
 
 .profile-content-wrapper h1 {
     font-size: 3rem;
-    color: lightseagreen;
+    color: #FF6A3D;
 }
 
 .profile-content-wrapper p1 {
-    font-size: 1.2rem ;
-}
-
-.profile-content-wrapper p2 {
-    align-items: center;
-    padding-left: 14rem;
-    font-size: 2.2rem ;
+    padding-top: 10px;
+    display: block;
+    align-content: left;
+    font-size: 25px;
+    padding-right: 10%;
+    font-size: 2rem ;
+    color: #f1f1f1;
 }
 
 /* welcome animated sign */
@@ -175,7 +187,7 @@ body {
 
 }
 .intro1{
-    color: aquamarine;
+    color: #FF6A3D;
     display: block;
     align-content: center;
     font-size: 20px;
@@ -193,9 +205,9 @@ body {
 .intro3{
     padding-top: 10px;
     display: block;
-    color: rgb(185, 185, 185) ;
+    color: rgb(158, 158, 158) ;
     align-content: left;
-    font-size: 23px;
+    font-size: 25px;
     padding-right: 20%;
 }
 
@@ -219,7 +231,7 @@ body {
     
   }
   .projects-intro p1 {
-      color: aquamarine;
+      color: #FF6A3D;
         text-transform: initial;
         padding: 3rem;
         align-items: center;
@@ -257,7 +269,7 @@ body {
 }
 
 .btn-white {
-    background-color: aquamarine;
+    background-color: #FF6A3D;
     color: #070e4b;
 }
 
@@ -303,22 +315,26 @@ body {
 /* social bar */
 
 .social-bar{
+    align-items: center;
+    align-self: center;
+    padding-left: auto;
+    padding-right: 10rem;
     padding-top: 1.5rem;
     text-align: center;
   }
   .social-btn{
     display: inline-block;
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     margin: 10px;
     border-radius: 40%;
-    color: lightseagreen;
+    color: #FF6A3D;
     overflow: hidden;
     position: relative;
   }
   .social-btn i{
-    line-height:100px;
-    font-size: 30px;
+    line-height:120px;
+    font-size: 50px;
     transition: 0.2s linear;
   }
   .social-btn:hover i{
@@ -331,7 +347,7 @@ body {
     position: absolute;
     width: 120%;
     height: 120%;
-    background: lightseagreen;
+    background: #FF6A3D;
     box-shadow: #070e4b;
     left: -110%;
     top: 90%;
