--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ body {
 }
 
 .info-wrapper {
+    margin-top: 8rem;
     display: flex ;
     grid-template-columns: 1fr;
     align-items: center;
@@ -75,8 +76,8 @@ body {
 
 
 .portfolio-items-wrapper {
-    padding-left: 5rem;
-    padding-right: 5rem;
+    padding-left: 7rem;
+    padding-right: 7rem;
     padding-bottom: 5rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -84,7 +85,10 @@ body {
 
 .portfolio-item-wrapper {
     padding: 0.5rem;
-    position: relative;    
+    position: relative;  
+}
+.portfolio-item-wrapper:hover{
+    cursor: pointer;
 }
 .portfolio-item-wrapper:hover .img-text-wrapper .subtitle{
     font-weight: 600;
@@ -104,7 +108,8 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    border-radius: 5%;  
+    border-radius: 32px;  
+    
 }
 
 .img-text-wrapper {
@@ -116,8 +121,8 @@ body {
     align-items: center;
     height: 100%;
     text-align: center;
-    padding-left: 100px;
-    padding-right: 100px;
+    width:90%;
+    margin:0 auto;  
 }
 
 .logo-wrapper img   {
@@ -156,6 +161,7 @@ body {
 .profile-content-wrapper {
     padding: 30px;
     position: relative;
+    margin-bottom: auto;
 }
 
 .profile-content-wrapper h1 {
@@ -239,13 +245,6 @@ body {
   }
 
   
-  
-
-  /* Contact button*/
-  .text-box {
-    margin-left: 44vw;
-    padding-bottom: 10rem;
-}
 
 .btn:link,
 .btn:visited {
@@ -336,10 +335,12 @@ body {
     line-height:120px;
     font-size: 50px;
     transition: 0.2s linear;
+    margin-bottom: 3px;
   }
   .social-btn:hover i{
-    margin-bottom: 3px;
-    color: #f1f1f1;
+    -webkit-transform: translateY(-5px);
+	transform: translateY(-5px);
+    color: white;
     
   }
   .social-btn::before{
@@ -400,4 +401,45 @@ body {
   .social-bar-left-index{
     padding-top: 1.5rem;
     text-align: center;
+  }
+
+  /* Button underline */
+  .hover-underline-animation {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    display: inline-block;
+    position: relative;
+    color: #FF6A3D;
+    border-bottom: transparent ;
+  }
+
+  .hover-underline-animation:hover{
+      cursor: pointer;  
+  }
+
+  .hover-underline-animation a{
+    margin-block-start: 0;
+    margin-block-end: 0;
+    display: inline-block;
+    position: relative;
+    color: #FF6A3D;
+    text-decoration: none;    
+  }
+  
+  .hover-underline-animation:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #FF6A3D;
+    transform-origin: bottom right;
+    transition: transform 0.30s ease-out;
+  }
+  
+  .hover-underline-animation:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
   }
