--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ li:hover{
 /* LOGO */
 .logo {
    padding-top: 5px;
-   padding-left: 42px;
+   padding-left: 38px;
    }
 .logo-image {
     width: 5.5rem;
@@ -177,6 +177,11 @@ input[type=checkbox]{
    }
 /* APPLYING MEDIA QUERIES */
 @media (max-width: 768px) {
+    .logo{
+        padding-top: 5px;
+        padding-left: 2px; 
+    }
+    
     .menu { 
      display:none;
      position: absolute;
@@ -212,6 +217,34 @@ input[type=checkbox]{
        .dropdown li:hover {
         background-color: #1A2238;
        }
+    .social-bar-left-index{
+        padding-top: 1.5rem;
+        text-align: center;
+        margin-left: -40px;
+        font-size: small;
+      }
+      .img-text-wrapper {
+        position: absolute;
+        display: flex ;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width:20%;        
+        margin-left: 20px;
+        margin-right: 20px;
+        
+    }
+    .portfolio-item-wrapper {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .portfolio-items-wrapper {
+        padding-left: 2rem;
+        padding-right: 2rem;
+        padding-bottom: 2rem;
+    }
+
 }
 
 .brand {
