--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,7 @@ input[type=checkbox]{
         bottom: 10px;;
     }
     .two-column-wrapper{
+        padding-left: 40px;
         align-content: center;
         display: flex;
     }
@@ -246,6 +247,7 @@ input[type=checkbox]{
         display: inline-block;
         width: 100vw;
         height: 50vh;
+        margin: 0 auto;
     }
     .profile-image-wrapper img {
         display: inline-block;
@@ -334,16 +336,17 @@ input[type=checkbox]{
         padding-right: 20%;
     }
 
-    
+    /* Bottom image and text */
     .two-column-wrapper {
         width: 100%;
+        height: 100%;
         margin: 0 auto;
         padding-top: 20px;
         display: inline-block;
         margin-bottom: 20px;
     }
     .profile-image-wrapper{
-        width: 100%;
+        max-width:fit-content;
         margin: 0 auto;
         display: inline-block;
         position: absolute;
@@ -399,22 +402,20 @@ input[type=checkbox]{
     .content-wrapper{
         width: 100%;
         margin: 0px auto;
-        padding-left: 80px;
-        padding-right: 80px;
+        padding-left:62rem;
+        padding-right: 2rem;
         padding-top: 5rem;
         padding-bottom: 5rem;
     }
     
     .portfolio-items-wrapper {
-        margin-left: 80px;
+        margin-left: -30px;
+        margin-right: -150px;
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
     }
-
     .portfolio-item-wrapper {
-        display: inline-block;
-        padding: 0.5rem;
+        display: flex;
         position: relative;  
     }
     .portfolio-item-wrapper:hover{
@@ -433,8 +434,8 @@ input[type=checkbox]{
     }
 
     .portfolio-img-background {
-        height: 20px;
-        width: 100%;
+        height: 400px;
+        width: 400px;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -451,7 +452,7 @@ input[type=checkbox]{
         align-items: center;
         height: 20%;
         text-align: center;
-        width:90%;
+        width: 40rem;
         margin:0 auto;  
     }
 
@@ -467,6 +468,7 @@ input[type=checkbox]{
         color: transparent;
     }
     
+    /* bottom image and text*/
     .two-column-wrapper {
         padding-top: 20px;
         display: grid;
@@ -614,16 +616,24 @@ input[type=checkbox]{
     border-radius: 40px;
 
 }
-
-.profile-image-wrapper img {
-    border-radius: 40px;
-    border: 2px solid transparent ;
+.profile-image-wrapper{
+    max-width:fit-content;    
+    padding-bottom: 2rem;
     display: block;
     margin-right: 2px;
     margin-left: auto;
-    max-width: 66%;
     height: auto;
-    padding-bottom: 2rem;
+}
+
+.profile-image-wrapper img {   
+    display: block;
+    margin-right: 2px;
+    margin-left: auto;
+    height: auto; 
+    max-width: 66%;
+    border-radius: 40px;
+    border: 2px solid transparent ;
+    
 }
 
 .profile-image-wrapper img:hover{
